[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/RecordPlayerPuzzle/PuzzleOne/RecordPlayerPuzzleOne.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/RecordPlayerPuzzle/PuzzleOne/puzzle_one_controller.gd" type="Script" id=2]
[ext_resource path="res://Shared/MouseHotspot/MouseHotspot.tscn" type="PackedScene" id=3]

[node name="PuzzleOneController" type="Node2D"]
script = ExtResource( 2 )

[node name="RecordPlayerPuzzleOne" parent="." instance=ExtResource( 1 )]

[node name="MouseHotspot" parent="." instance=ExtResource( 3 )]
margin_left = 200.0
margin_top = 733.0
margin_right = 1230.0
margin_bottom = 2083.0
[connection signal="is_active" from="RecordPlayerPuzzleOne" to="." method="_on_RecordPlayerPuzzleOne_is_active"]
[connection signal="is_pressed" from="MouseHotspot" to="." method="_on_MouseHotspot_is_pressed"]
